<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">glSatellite Demo</string>
    <string name="settings">Settings</string>
    <string name="format_std">FPS: %1$2.0f DT: %2$tF TLE: %3$s</string>
    <string name="format_fail">Downloading failed for %1$s</string>
    <string name="format_default">FPS: %1$2.0f Offline Iridium TLE</string>
    <string name="format_info">%1$s (%2$d)\nLAT: %3$f LON: %4$f\nALT: %5$f</string>
    <string name="title_other">Other</string>
    <string name="title_sync"><b>Sync TLE Fetch URL</b></string>

    <!-- Strings related to Settings -->
    <string name="pref_title_db">Satellites</string>
    <string name="pref_url_title">TLE Fetch URL</string>

    <string name="pref_title_db_special">Special Interest</string>
    <string-array name="db_special_entries">
        <item>Last 30 Days Launches</item>
        <item>Space Stations</item>
        <item>100 (or so) Brightest</item>
        <item>FENGYUN 1C Debris</item>
        <item>IRIDIUM 33 Debris</item>
        <item>COSMOS 2251 Debris</item>
        <item>BREEZE&#8211;M R/B Breakup (2012&#8211;044C)</item>
    </string-array>
    <string-array name="db_special_values">
        <item>tle-new</item>
        <item>stations</item>
        <item>visual</item>
        <item>1999-025</item>
        <item>iridium-33-debris</item>
        <item>cosmos-2251-debris</item>
        <item>2012-044</item>
    </string-array>

    <string name="pref_title_db_earth">Weather &amp; Earth Resources</string>
    <string-array name="db_earth_entries">
        <item>Weather</item>
        <item>NOAA</item>
        <item>GOES</item>
        <item>Earth Resources</item>
        <item>Search &amp; Rescue (SARSAT)</item>
        <item>Disaster Monitoring</item>
        <item>Tracking and Data Relay Satellite System (TDRSS)</item>
        <item>ARGOS Data Collection System</item>
    </string-array>
    <string-array name="db_earth_values">
        <item>weather</item>
        <item>noaa</item>
        <item>goes</item>
        <item>resource</item>
        <item>sarsat</item>
        <item>dmc</item>
        <item>tdrss</item>
        <item>argos</item>
    </string-array>

    <string name="pref_title_db_comm">Communications</string>
    <string-array name="db_comm_entries">
        <item>Geostationary</item>
        <item>Intelsat</item>
        <item>Gorizont</item>
        <item>Raduga</item>
        <item>Molniya</item>
        <item>Iridium</item>
        <item>Orbcomm</item>
        <item>Globalstar</item>
        <item>Amateur Radio</item>
        <item>Experimental</item>
        <item>Other</item>
    </string-array>
    <string-array name="db_comm_values">
        <item>geo</item>
        <item>intelsat</item>
        <item>gorizont</item>
        <item>raduga</item>
        <item>molniya</item>
        <item>iridium</item>
        <item>orbcomm</item>
        <item>globalstar</item>
        <item>amateur</item>
        <item>x-comm</item>
        <item>other-comm</item>
    </string-array>

    <string name="pref_title_db_nav">Navigation</string>
    <string-array name="db_nav_entries">
        <item>GPS Operational</item>
        <item>Glonass Operational</item>
        <item>Galileo</item>
        <item>Beidou</item>
        <item>Satellite-Based Augmentation System (WAAS/EGNOS/MSAS)</item>
        <item>Navy Navigation Satellite System (NNSS)</item>
        <item>Russian LEO Navigation</item>
    </string-array>
    <string-array name="db_nav_values">
        <item>gps-ops</item>
        <item>glo-ops</item>
        <item>galileo</item>
        <item>beidou</item>
        <item>sbas</item>
        <item>nnss</item>
        <item>musson</item>
    </string-array>

    <string name="pref_title_db_sci">Scientific</string>
    <string-array name="db_sci_entries">
        <item>Space &amp; Earth Science</item>
        <item>Geodetic</item>
        <item>Engineering</item>
        <item>Education</item>
    </string-array>
    <string-array name="db_sci_values">
        <item>science</item>
        <item>geodetic</item>
        <item>engineering</item>
        <item>education</item>
    </string-array>

    <string name="pref_title_db_misc">Miscellaneous</string>
    <string-array name="db_misc_entries">
        <item>Miscellaneous Military</item>
        <item>Radar Calibration</item>
        <item>CubeSats</item>
        <item>Other</item>
    </string-array>
    <string-array name="db_misc_values">
        <item>military</item>
        <item>radar</item>
        <item>cubesats</item>
        <item>other</item>
    </string-array>
</resources>
